# SweetLine

./: .gitignore  .gitmodules  CMakeLists.txt  EXCEPTION  LICENSE  README.md  README_en.md  README_zh.md
3dparty/: README.md
3dparty/catch2/: sweetline_3p.cmake
3dparty/nlohmann_json/: METADATA  sweetline_3p.cmake
3dparty/oniguruma/: LICENSE  METADATA  sweetline_3p.cmake
3dparty/utfcpp/: METADATA  sweetline_3p.cmake
cmake/: MergeStaticLib.cmake  SweetLineTargets.cmake  SweetLineThirdParty.cmake  SweetLineWasm.cmake  build-emscripten.bat
cmake/platform/: Android.cmake  Apple.cmake  Emscripten.cmake  Linux.cmake  OHOS.cmake  Windows.cmake
docs/: api.md  api_en.md  syntax_rule.md  syntax_rule_en.md  语法配置规则.md  项目命名规范.md
docs/en/: api.md  api_android.md  api_build.md  api_c.md  api_core.md  api_dotnet.md  api_flutter.md  api_ios.md  api_java22.md  api_macos.md  api_ohos.md  api_wasm.md  engine_comparison.md  join.md  syntax_rule.md
docs/zh/: api.md  api_android.md  api_build.md  api_c.md  api_core.md  api_dotnet.md  api_flutter.md  api_ios.md  api_java22.md  api_macos.md  api_ohos.md  api_wasm.md  engine_comparison.md  join.md  syntax_rule.md
include/: c_wrapper.hpp  macro.h
include/sweetline/: c_sweetline.h  c_wrapper.hpp  foundation.h  highlight.h  syntax.h  util.h
platform/Android/: README.md  gradle.properties  settings.gradle
platform/Android/app/: build.gradle
platform/Android/gradle/: libs.versions.toml
platform/Android/markwon-plugin/: build.gradle
platform/Android/sweetline/: CHANGELOG.md  build.gradle  consumer-rules.pro
platform/Apple/: .gitignore  Makefile  Package.swift  README.md  build.sh
platform/Apple/Examples-MacOS/: Package.swift
platform/Apple/Examples-macOS/: Package.swift
platform/Apple/Scripts/: sync-apple-package.sh  sync-native.sh
platform/Apple/SweetLine/: Document.swift  DocumentAnalyzer.swift  HighlightEngine.swift  Models.swift  SweetLine.swift  SweetLineNative.swift  TextAnalyzer.swift
platform/Apple/scripts/: build_native_xcframework.sh  copy-native-xcframework.sh
platform/CSharp/: CSharp.sln
platform/CSharp/Demo/: CodeViewControl.cs  Demo.csproj  Form1.cs  HighlightTheme.cs  Program.cs
platform/CSharp/SweetLine/: CHANGELOG.md  Models.cs  README.md  SweetLine.cs  SweetLine.csproj  SweetLineNative.cs
platform/Emscripten/: CHANGELOG.md  README.md  demo.html  fasthighlight_bindings.cpp  libsweetline.d.ts  sweetline.d.ts  sweetline_bindings.cpp
platform/Flutter/: pubspec.yaml
platform/Flutter/demo/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
platform/Flutter/sweetline/: .pubignore  CHANGELOG.md  DEVELOPING.md  README.md  pubspec.yaml
platform/Flutter/tool/: sync_demo_assets.dart
platform/Java22/: .gitignore  CHANGELOG.md  settings.gradle
platform/Java22/demo/: build.gradle
platform/Java22/sweetline/: CHANGELOG.md  README.md  build.gradle
platform/KMP/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
platform/KMP/buildSrc/: settings.gradle.kts
platform/KMP/demo/: build.gradle.kts
platform/KMP/gradle/: libs.versions.toml
platform/KMP/sweetline/: CHANGELOG.md  README.md  build.gradle.kts
platform/OHOS/: build-profile.json5  log.txt
platform/OHOS/AppScope/: app.json5
platform/OHOS/demo/: .gitignore  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
platform/OHOS/sweetline/: BuildProfile.ets  CHANGELOG.md  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
platform/iOS/SweetLine/: README.md
platform/macOS/SweetLine/: Package.swift  README.md
platform/macOS/SweetLineDemo/: .gitignore
prebuilt/ios/arm64/: libsweetline.dylib
prebuilt/ios/simulator-arm64/: libsweetline.dylib
prebuilt/macos/arm64/: libsweetline.dylib
prebuilt/macos/x86_64/: libsweetline.dylib
prebuilt/osx/arm64/: libsweetline.dylib
prebuilt/osx/x86_64/: libsweetline.dylib
prebuilt/wasm/: sweetline.d.ts  sweetline.js  sweetline.wasm
scripts/: RELEASE_NOTES.md  build-shared.ps1  build-shared.sh  package-artifacts.ps1  release-all.ps1  release-all.sh
skills/sweetline-syntax-profile/: SKILL.md
skills/syntax-highlighting-authoring/: SKILL.md
src/: bracket_pair.cpp  c_sweetline.cpp  foundation.cpp  global.cpp  highlight.cpp  indent_guide.cpp  internal_highlight.h  internal_syntax.h  syntax.cpp  util.cpp
src/core/: foundation.cpp  global.cpp  highlight.cpp  indent_guide.cpp  internal_highlight.h  internal_syntax.h  syntax.cpp  util.cpp
src/include/: c_sweetline.h  foundation.h  highlight.h  macro.h  syntax.h  util.h
src/shared/: c_sweetline.cpp  c_wrapper.hpp
syntaxes/: abnf.json  asm-aarch64.json  asm-att.json  asm-intel.json  asm.json  baml.json  batch.json  bazel.json  bend.json  brainfuck.json  c.json  cangjie.json  clojure.json  cmake.json  cpp.json  csharp.json  css.json  cue.json  dart.json  diff.json  dockerfile.json  dts.json  elisp.json  elixir.json  env.json  erlang.json  fsharp.json  gitignore.json  glsl.json  go.json  gradle-kts.json  gradle.json  graphql.json  groovy.json  hcl.json  hlsl.json  html.json  iapp.json  ini.json  jasm.json  (+53 more)
tests/: CMakeLists.txt  bracket_pair_test.cpp  c_api_test.cpp  compile_rule.cpp  foundation_crlf_test.cpp  highlight_test.cpp  indent_test.cpp  patch_text.cpp  syntax_test.cpp  test_helpers.h  tests_main.cpp
tests/files/: BUILD.bazel  Justfile  Main.java  Test.java  Test.md  View.java  build.gradle  example.aarch64  example.abnf  example.asm  example.astro  example.baml  example.bat  example.bend  example.bf  example.bicep  example.build.gradle.kts  example.bzl  example.c  example.cj  example.clj  example.cmake  example.cpp  example.cs  example.css  example.csv  example.cue  example.dart  example.diff  example.dockerfile  example.dts  example.el  example.env  example.erl  example.ex  example.fs  example.gitignore  example.glsl  example.go  example.graphql  (+73 more)
tests/languages/: fsharp_test.cpp  highlight_test.cpp  java_test.cpp  python_test.cpp  tiecode_test.cpp
tests/multi-group/: multi-group.json  multi-group.test
tests/multi-line/: multi-line.json  multi-line.test
(+209 files in other folders)
